@@ -49,7 +49,7 @@
 
 /* --------------------------------------------------------------------------------------------------------- */
 
-#define BUILD 41
+#define BUILD 42
 
 /* --------------------------------------------------------------------------------------------------------- */
 
@@ -129,6 +129,8 @@ in ADF mode this is done often:
 #include "sane/saneopts.h"
 #include "sane/sanei_scsi.h"
 #include "sane/sanei_debug.h"
+#include "sane/sanei_backend.h"
+#include "sane/sanei_config.h"
 
 #ifdef HAVE_OS2_H
 # include "../include/sane/sanei_thread.h"
@@ -149,8 +151,6 @@ in ADF mode this is done often:
 #endif
 
 #include "umax.h"
-#include "sane/sanei_backend.h"
-#include "sane/sanei_config.h"
 
 /* ------------------------------------------------------------ SANE DEFINES ------------------------------- */
 
